1.21.1 to 1.20.1 backport